--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/hdpicture_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/hdpicture_list.html
@@ -111,23 +111,27 @@
             <!--新建保存修改-->
             <el-row class="el-row-h60" style="margin-top:20px;">
                 <el-col :span="3" :offset="8">
-                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('voteOptForm')">保存</el-button>
+                    <el-button type="primary" style="width:100%" @click="testSubmit('hdPicForm')">保存</el-button>
                 </el-col>
                 <el-col :span="3" :offset="2">
-                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('voteOptForm')">取消</el-button>
+                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('hdPicForm')">取消</el-button>
                 </el-col>
             </el-row>
             
             <!--内容图弹出层开始-->
-            <el-dialog title="内容图库" :visible.sync="showContentImgLib" width="100%" :fullscreen="true" :show-close="false">
-                <el-form :model="searchContentimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
+           
+
+
+
+            <el-dialog title="内容图库" :visible.sync="showContentImgLib" width="100%" :fullscreen="true" :show-close="false" >
+                <el-form :model="searchContentImgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
-                        <el-col :span="11">
+                        <el-col :span="16">
                             <el-form-item label="图片名称" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="searchContentimgForm.picTitle"
+                                v-model="searchContentImgForm.picTitle"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
@@ -139,7 +143,7 @@
                         </el-col>
                     </el-row>
                 </el-form>
-                <el-table :data="contentimgTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="multipleTable" @selection-change="handleSelectionChange" stripe>
+                <el-table :data="contentImgTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="contentImgTableData" stripe>
                     <el-table-column prop="picUrl" label="内容图预览" width="180">
                         <template v-if="scope.row.picUrl" slot-scope="scope">
                             <img style="width:80px;height:60px;" :src="scope.row.picUrl">
@@ -148,10 +152,10 @@
                     <el-table-column prop="picTitle" label="图片名称" width="250"></el-table-column>
                     <el-table-column prop="picEditorName" label="修改人" width="120"></el-table-column>
                     <el-table-column prop="picModTime" label="最后更新时间"></el-table-column>
-                    <el-table-column
-                        fixed="right"
-                        type="selection"
-                        width="55">
+                    <el-table-column label="操作" width="100" fixed="right">
+                        <template slot-scope="scope">
+                            <el-button type="text" size="small" @click="addThisContentImg(scope.row)">添加</el-button>
+                        </template>
                     </el-table-column>
                 </el-table>
                 <!--分页器-->
