--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/hdpicture_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/hdpicture_list.html
@@ -39,11 +39,15 @@
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
-                    <el-table-column prop="diagramInfoPriority" width="160" label="权重"></el-table-column>
-                    <el-table-column prop="diagramInfoImg" width="420" label="图片"></el-table-column>
-                    <el-table-column prop="diagramInfoTitle" width="180" label="标题"></el-table-column>
-                    <el-table-column prop="diagramInfoCrtTime" width="100" label="创建时间"></el-table-column>
-                    <el-table-column label="操作"  fixed="right">
+                    <el-table-column prop="diagramId" width="160" label="组图所属列表编号"></el-table-column>
+                    <el-table-column prop="diagramInfoImg" width="180" label="图片" margin-left="30">
+                        <template v-if="scope.row.diagramInfoImg" slot-scope="scope">
+                            <img style="width:80px;height:60px;" :src="scope.row.diagramInfoImg">
+                        </template>
+                    </el-table-column>
+                    <el-table-column prop="diagramInfoTitle" label="标题"></el-table-column>
+                    <el-table-column prop="diagramInfoCrtTime" width="300" label="创建时间"></el-table-column>
+                    <el-table-column label="操作" width="160" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="addOrEditHdpic(1,scope.row)">编辑</el-button>
                             <el-button type="text" size="small" @click="deleteThisHdpic(scope.row)">删除</el-button>
@@ -82,17 +86,32 @@
                                 </el-input>
                             </el-form-item>
                         </el-col>
+                    </el-row>
+                    <el-row class="el-row-h70">
                         <el-col :span="12">
-                            <el-form-item label="组图权重" prop="diagramInfoPriority" style="margin:0;">
+                            <el-form-item label="组图所属列表编号" prop="diagramId" style="margin:0;">
                                 <el-input
                                     clearable
                                     type="text"
                                     maxlength="50"
-                                    placeholder="机构显示顺序，默认为-1"
-                                    v-model="hdPicForm.diagramInfoPriority"
+                                    placeholder="组图所属列表编号"
+                                    v-model="hdPicForm.diagramId"
                                     auto-complete="off">
                                 </el-input>
                             </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row class="el-row-h70">
+                        <el-col :span="12">
+                            <el-form-item label="权重" prop="diagramInfoPriority" style="margin:0;">
+                            <el-input
+                                clearable
+                                type="text"
+                                maxlength="50"
+                                placeholder="机构显示顺序，默认为-1"
+                                v-model="hdPicForm.diagramInfoPriority"
+                                auto-complete="off">
+                            </el-input>
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h220">
@@ -119,10 +138,6 @@
             </el-row>
             
             <!--内容图弹出层开始-->
-           
-
-
-
             <el-dialog title="内容图库" :visible.sync="showContentImgLib" width="100%" :fullscreen="true" :show-close="false" >
                 <el-form :model="searchContentImgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
