--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
@@ -29,7 +29,7 @@
                                 <el-input
                                 clearable
                                 v-model="searchForm.diagramTitle"
-                                placeholder="输入组图标题名称"
+                                placeholder="输入组图标题"
                                 type="text"
                                 auto-complete="off"></el-input>
                             </el-form-item>
@@ -49,7 +49,7 @@
                 <div class="cv_content_square">
                     <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
                         <el-table-column prop="diagramMeetingId" width="160" label="会议详情编号"></el-table-column>
-                        <el-table-column prop="diagramTitle"  label="组图标题名称"></el-table-column>
+                        <el-table-column prop="diagramTitle"  label="组图标题"></el-table-column>
                         <el-table-column prop="diagramCrtTime" width="180" label="创建时间"></el-table-column>
                         <el-table-column prop="diagramCrtUserId" label="创建人" width="200"></el-table-column>
                         <el-table-column label="操作" width="180" fixed="right">
@@ -125,9 +125,11 @@
             <!-- 高清组图列表开始 -->
             <div v-show="showDetailPage">
                 <div class="cv_content_square">
-                    <el-form :model="diagramTableForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right" @submit.native.prevent>
-                        <el-table :data="diagramTableForm.diagramTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="contentImgTableData" stripe>
-                            <el-table-column prop="diagramInfoPriority" label="权重" width="150"></el-table-column>
+                    <!-- <el-form :model="diagramTableForm" ref="diagramTableForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right" @submit.native.prevent></el-form> -->
+                        <el-table :data="diagramTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="contentImgTableData" stripe>
+                            <el-table-column prop="diagramInfoPriority" label="权重" width="150">
+                                
+                            </el-table-column>
                             <el-table-column prop="diagramId" label="所属组图编号" width="150"></el-table-column>
                             <el-table-column prop="diagramInfoImg" label="图片" width="180">
                                 <template v-if="scope.row.diagramInfoImg" slot-scope="scope">
@@ -139,12 +141,12 @@
                             
                             <el-table-column label="操作" width="150" fixed="right">
                                 <template slot-scope="scope">
-                                    <el-button type="text" size="small" @click="addOrEdit(1,scope.row)">编辑</el-button>
-                                    <el-button type="text" size="small" @click="delet(scope.row)">删除</el-button>
+                                    <!-- <el-button type="text" size="small" @click="EditDiaDetail(scope.row)">编辑</el-button> -->
+                                    <el-button type="text" size="small" @click="deleteThisDiaDetail(scope.row)">删除</el-button>
                                 </template>
                             </el-table-column>
                         </el-table>
-                    </el-form>
+                    <!-- </el-form> -->
                 </div>
                 <!-- <div class="cv_page_zone">
                     <el-pagination
