--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
@@ -35,14 +35,14 @@
                             </el-form-item>
                         </el-col>
                         <el-col :span="2" :offset="1" class="el-row-h40">
-                            <el-button style="width:100%" @click="startSearch(0)">搜索</el-button>
+                            <el-button type="primary" style="width:100%" @click="startSearch(0)">搜索</el-button>
                         </el-col>
                     </el-row>
                 </el-form>
                 <!--功能按钮区-->
                 <el-row class="el-row-h50">
-                    <el-col :span="3">
-                        <el-button type="primary" type="primary" style="width:100%" @click="addOrEditPic(0)">新建高清组图</el-button>
+                    <el-col :span="4">
+                        <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditPic(0)">新建高清组图</el-button>
                     </el-col>
                 </el-row>
                 <!--表格查询结果区-->
@@ -72,14 +72,14 @@
                     </el-pagination>
                 </div>
             </div>
-
-
             <!------------------列表结束------------------>
+
+            
             <!------------------新建高清组图开始------------------>
             <div v-show="showHdPage">
                 <div class="cv_content_square">
                     <el-form :model="diagramForm" :rules="diagramFormRules" ref="diagramForm" label-position="left" status-icon class="demo-ruleForm" label-width="13%" label-position="right">
-                        <el-row class="el-row-h70">
+                        <!-- <el-row class="el-row-h70">
                             <el-col :span="18">
                                 <el-form-item label="所属会议详情编号" label-width="20%" prop="diagramMeetingId" style="margin:0;">
                                     <el-input
@@ -91,7 +91,7 @@
                                         ></el-input>
                                 </el-form-item>
                             </el-col>
-                        </el-row>
+                        </el-row> -->
                         <el-row class="el-row-h70">
                             <el-col :span="18">
                                 <el-form-item label="高清组图名称" label-width="20%" prop="diagramTitle" style="margin:0;">
@@ -125,7 +125,12 @@
             <!-- 高清组图列表开始 -->
             <div v-show="showDetailPage">
                 <div class="cv_content_square">
-                    <!-- <el-form :model="diagramTableForm" ref="diagramTableForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right" @submit.native.prevent></el-form> -->
+                        <el-row class="el-row-h50">
+                            <el-col class="el-row-h40" :span="3">
+                                <el-button type="primary" plain icon="el-icon-plus" style="width: 100%" @click="chooseContentImg()">添加图片</el-button>
+                            </el-col>
+                        </el-row>
+                    
                         <el-table :data="diagramTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="contentImgTableData" stripe>
                             <el-table-column prop="diagramInfoPriority" label="权重" width="150">
                                 <template slot-scope="scope">
@@ -149,12 +154,11 @@
                             
                             <el-table-column label="操作" width="150" fixed="right">
                                 <template slot-scope="scope">
-                                    <!-- <el-button type="text" size="small" @click="EditDiaDetail(scope.row)">编辑</el-button> -->
                                     <el-button type="text" size="small" @click="deleteThisDiaDetail(scope.row)">删除</el-button>
                                 </template>
                             </el-table-column>
                         </el-table>
-                    <!-- </el-form> -->
+                    
                 </div>
                 <!-- <div class="cv_page_zone">
                     <el-pagination
@@ -165,16 +169,11 @@
                     </el-pagination>
                 </div> -->
                 <el-row style="margin-top: 30px">
-                    <el-col class="el-row-h40" :span="2">
-                        <el-button type="primary" style="width: 100%" @click="chooseContentImg()">添加图片</el-button>
+                    <el-col class="el-row-h40" :span="3" :offset="8">
+                        <el-button type="primary" style="width: 100%"  @click.native="submitForm">保存</el-button>
                     </el-col>
-                    <el-col class="el-row-h40" :span="2" :offset="14">
-                        
-                        <el-button type="palin" style="width: 100%"  @click.native="submitForm">保存</el-button>
-                        
-                    </el-col>
-                    <el-col class="el-row-h40" :span="2" :offset="1">
-                        <el-button type="plain" style="width: 100%" @click="closeDiaTable()">取消</el-button>
+                    <el-col class="el-row-h40" :span="3" :offset="2">
+                        <el-button type="primary" style="width: 100%" @click="closeDiaTable()">取消</el-button>
                     </el-col>
                 </el-row>
             </div>
@@ -235,116 +234,10 @@
                 </div>
             </el-dialog>
             <!--内容图库弹出层结束-->
-       
-
-
-
-        <!-- 新建组图列表开始 -->
-        <!-- <el-dialog title="高清组图列表" :visible.sync="showDiagramLab" width="100%" :fullscreen="true" :show-close="false" >
-            <el-form v-model="diagramTableForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right" @submit.native.prevent>
-
-              
-            <el-table :data="diagramTableForm.diagramTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="contentImgTableData" stripe>
-                <el-table-column prop="diagramInfoPriority" label="权重" width="150"></el-table-column>
-                <el-table-column prop="diagramId" label="所属组图编号" width="150"></el-table-column>
-                <el-table-column prop="diagramInfoImg" label="图片" width="180">
-                    <template v-if="scope.row.diagramInfoImg" slot-scope="scope">
-                        <img style="width:80px;height:60px;" :src="scope.row.diagramInfoImg">
-                    </template>
-                </el-table-column>
-                <el-table-column prop="diagramInfoTitle" label="标题" ></el-table-column>
-                <el-table-column prop="diagramInfoCrtTime" label="创建时间" width="200"></el-table-column>
-                
-                <el-table-column label="操作" width="150" fixed="right">
-                    <template slot-scope="scope">
-                        <el-button type="text" size="small" @click="addOrEdit(1,scope.row)">编辑</el-button>
-                        <el-button type="text" size="small" @click="delet(scope.row)">删除</el-button>
-                    </template>
-                </el-table-column>
-            </el-table>
-            
-            <div class="cv_page_zone">
-                <el-pagination
-                    :current-page="pagination2.currPage"
-                    :page-size="pagination2.pageSize"
-                    layout="total, prev, pager, next, jumper"
-                    :total="pagination2.totalCount">
-                </el-pagination>
-            </div>
-            <el-row style="margin-top: 30px">
-                <el-col class="el-row-h40" :span="2">
-                    <el-button type="primary" style="width: 100%" @click="addDiaPic()">添加图片</el-button>
-                </el-col>
-                <el-col class="el-row-h40" :span="2" :offset="14">
-                        <el-button type="palin" style="width: 100%"  @click="saveDiagramTable()">保存</el-button>
-                    </el-col>
-                    <el-col class="el-row-h40" :span="2" :offset="1">
-                        <el-button type="plain" style="width: 100%" @click="closeDiaTable()">取消</el-button>
-                    </el-col>
-            </el-row>
-            </el-form> 
-        </el-dialog> -->
-        <!--新建组图列表结束-->
         </div>
 
 
-    <!--组图列表弹出层开始-->
-    <!-- <el-dialog title="组图列表" :visible.sync="showDiaLibDialog" width="100%" :fullscreen="true" :show-close="false">
-        <el-form :model="searchDiagramForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
-            <el-row class="el-row-h60">
-                <el-col :span="12">
-                    <el-form-item label="所属组图编号" style="margin:0;">
-                        <el-input
-                        clearable
-                        type="text"
-                        v-model="searchDiagramForm.diagramId"
-                        auto-complete="off"></el-input>
-                    </el-form-item>
-                </el-col>
-                <el-col :span="3" :offset="1" class="el-row-h40">
-                    <el-button type="primary" icon="el-icon-search" style="width:100%"  @click="searchDiaList(0)">搜索</el-button>
-                </el-col>
-                <el-col :span="3" :offset="1" class="el-row-h40">
-                    <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="batchAddDia()">批量添加</el-button>
-                </el-col>
-                <el-col :span="3" :offset="1" class="el-row-h40">
-                    <el-button type="primary"  style="width:100%" @click="backToEdit()">返回</el-button>
-                </el-col>
-            </el-row>
-        </el-form>
-        <el-table :data="DiaTableData" max-height="450" style="width: 100%; margin:10px auto;" @selection-change="handleSelectionChange"  ref="multipleTable" stripe>
-            <el-table-column
-                type="selection"
-                width="55">
-            </el-table-column>
-            <el-table-column prop="diagramInfoImg" label="组图图片" width="300">
-                <template v-if="scope.row.diagramInfoImg" slot-scope="scope">
-                    <img style="width:150px;height:150px" :src="scope.row.diagramInfoImg">
-                </template>
-            </el-table-column>
-            <el-table-column prop="diagramInfoPriority" width="140" label="权重"></el-table-column>
-            <el-table-column prop="diagramId" width="140" label="所属组图编号"></el-table-column>
-            
-            <el-table-column prop="diagramInfoTitle"  label="标题"></el-table-column>
-            <el-table-column prop="diagramInfoCrtTime" width="160" label="创建时间"></el-table-column>
-            <el-table-column label="操作" width="160" fixed="right">
-                <template slot-scope="scope">
-                    <el-button type="text" size="small" @click="addThisDiagram(scope.row)">添加</el-button>
-                </template>
-            </el-table-column>
-        </el-table>
-        
-        <div class="cv_page_zone">
-            <el-pagination
-                
-                :current-page="pagination3.currPage"
-                :page-size="pagination3.pageSize"
-                layout="total, prev, pager, next, jumper"
-                :total="pagination3.totalCount">
-            </el-pagination>
-        </div>
-    </el-dialog> -->
-    <!--机构列表弹出层结束-->
+   
         
 
     </div>
