--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
@@ -39,7 +39,7 @@
                                 </el-form-item>
                             </el-col>
                             <el-col :span="2" :offset="1" class="el-row-h40">
-                                <el-button style="width:100%" @click="startSearch(0)">搜索</el-button>
+                                <el-button type="primary" style="width:100%" @click="startSearch(0)">搜索</el-button>
                             </el-col>
                         </el-row>
                     </el-form>
@@ -47,7 +47,7 @@
                 <!--功能按钮区-->
                 <el-row class="el-row-h50">
                     <el-col :span="3">
-                        <el-button type="primary" type="primary" style="width:100%" @click="addOrEditVote(0)">新建投票</el-button>
+                        <el-button type="primary" type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditVote(0)">新建投票</el-button>
                     </el-col>
                 </el-row>
                 <!--表格查询结果区-->
@@ -85,7 +85,7 @@
             <div v-show="showChildList">
                 <div class="cv_content_square">
                     <el-form :model="voteForm" :rules="voteFormRules" ref="voteForm" label-position="left" status-icon class="demo-ruleForm" label-width="13%" label-position="right">
-                        <el-row class="el-row-h70">
+                        <!-- <el-row class="el-row-h70">
                             <el-col :span="18">
                                 <el-form-item label="所属会议详情编号" label-width="20%" prop="voteMeetingId" style="margin:0;">
                                     <el-input
@@ -98,7 +98,7 @@
                                         ></el-input>
                                 </el-form-item>
                             </el-col>
-                        </el-row>
+                        </el-row> -->
                         <el-row class="el-row-h70">
                             <el-col :span="18">
                                 <el-form-item label="投票类型" label-width="12%" prop="voteType" style="margin:0;">
@@ -161,10 +161,10 @@
                         
                     </el-form>
                     <el-row style="margin-top: 30px">
-                        <el-col class="el-row-h40" :span="2">
+                        <el-col class="el-row-h40" :span="3" :offset="8">
                             <el-button type="primary" style="width: 100%" @click="testSubmit('voteForm')">保存</el-button>
                         </el-col>
-                        <el-col class="el-row-h40" :span="2" :offset="1">
+                        <el-col class="el-row-h40" :span="3" :offset="2">
                             <el-button type="primary" style="width: 100%" @click="closeCreatOrEdit('voteForm')">取消</el-button>
                         </el-col>
                     </el-row>
@@ -254,10 +254,10 @@
                         
                     </el-form>
                     <el-row style="margin-top: 30px">
-                        <el-col class="el-row-h40" :span="2">
+                        <el-col class="el-row-h40" :span="3" :offset="8">
                             <el-button type="primary" style="width: 100%" @click="testSubmit('voteForm')">保存</el-button>
                         </el-col>
-                        <el-col class="el-row-h40" :span="2" :offset="1">
+                        <el-col class="el-row-h40" :span="3" :offset="2">
                             <el-button type="primary" style="width: 100%" @click="closeCreatOrEdit('voteForm')">取消</el-button>
                         </el-col>
                     </el-row>
