--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
@@ -53,13 +53,12 @@
                 <!--表格查询结果区-->
                 <div class="cv_content_square">
                     <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
-                        <el-table-column prop="voteId" width="110" label="投票编号"></el-table-column>
                         <el-table-column prop="voteMeetingId" width="160" label="所属会议详情编号"></el-table-column>
-                        <el-table-column prop="voteTitle" width="220" label="投票名称"></el-table-column>
+                        <el-table-column prop="voteTitle" label="投票名称"></el-table-column>
                         <el-table-column prop="voteType" width="110" label="类型"></el-table-column>
                         <el-table-column prop="voteCrtTime" width="180" label="创建时间"></el-table-column>
-                        <el-table-column prop="userName" width=90 label="创建人"></el-table-column>
-                        <el-table-column label="操作"  fixed="right">
+                        <el-table-column prop="userName" width="110" label="创建人"></el-table-column>
+                        <el-table-column label="操作" width="180" fixed="right">
                             <template slot-scope="scope">
                                 <el-button type="text" size="small" @click="addOrEditVote(1,scope.row)">编辑</el-button>
                                 <el-button type="text" size="small"@click="addOrEditVote(2,scope.row)" >详情</el-button>
@@ -89,11 +88,17 @@
                         <el-row class="el-row-h70">
                             <el-col :span="18">
                                 <el-form-item label="投票类型" label-width="12%" prop="voteType" style="margin:0;">
-                                    <template>
-                                        <div>
-                                            <label><input @click="getRadioVal" type="radio" name="type" value="多项单选">多项单选</label>
+                                    <template slot-scope="scope">
+                                        <!-- <div>
+                                            <label><input @click="getRadioVal(scope.row)" type="radio" name="type" value="多项单选">多项单选</label>
                                             <label><input @click="getRadioVal" type="radio" name="type" value="观点PK">观点PK</label>
-                                        </div>
+                                        </div> -->
+                                        <!-- <el-radio v-if="scope.row.voteType == 0">文章</el-radio>
+                                        <el-radio v-if="scope.row.voteType == 0">文章</el-radio> -->
+                                        
+                                            <el-radio v-model="voteForm.voteType" label="多项单选">多项单选</el-radio>
+                                            <el-radio v-model="voteForm.voteType" label="观点PK">观点PK</el-radio>
+                                          
                                     </template>
                                 </el-form-item>
                             </el-col>
@@ -104,10 +109,15 @@
                                     <el-input
                                         clearable
                                         type="text"
+                                        maxlength="36"
+                                        show-word-limit
                                         placeholder="请输入投票名称"
                                         v-model="voteForm.voteTitle"
                                         auto-complete="off"
-                                        ></el-input>
+                                        >
+                                        <template slot="append">限制36个字</template>
+                                    </el-input>
+                                        
                                 </el-form-item>
                             </el-col>
                         </el-row>
@@ -117,10 +127,13 @@
                                     <el-input
                                         clearable
                                         type="textarea"
+                                        maxlength = "50"
+                                        show-word-limit
                                         placeholder="请输入投票摘要"
                                         v-model="voteForm.voteDesc"
                                         auto-complete="off"
-                                        ></el-input>
+                                        >
+                                    </el-input>
                                 </el-form-item>
                             </el-col>
                         </el-row>
